--- a/LoRaWAN.csproj
+++ b/LoRaWAN.csproj
@@ -37,12 +37,20 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="BackendPacket.cs" />
+    <Compile Include="JoinRequest.cs" />
+    <Compile Include="Packet.cs" />
+    <Compile Include="PacketFactory.cs" />
+    <Compile Include="SemtechPacket.cs" />
+    <Compile Include="Server.cs" />
+    <Compile Include="Stat.cs" />
+    <Compile Include="Txpk.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="System" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
