Network Server can now receive UDP packets

--- a/LoRaWAN Backend/appsettings.json
+++ b/LoRaWAN Backend/appsettings.json
@@ -8,6 +8,7 @@
     "AllowedHosts": "*",
 
     // TODO: Add URLs
+    "NetworkServerUDP_Port": 11000,
     "NetworkServerURL": "http://localhost:5100",
     "JoinServerURL": "",
     "ApplicationServerURL": ""
