--- a/LoRaWAN Backend/appsettings.json
+++ b/LoRaWAN Backend/appsettings.json
@@ -1,15 +1,15 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*",
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*",
 
-    // TODO: Add URLs
-    "NetworkServerUDP_Port": 11000,
-    "NetworkServerURL": "http://localhost:5100",
-    "JoinServerURL": "",
-    "ApplicationServerURL": ""
+  // TODO: Add URLs
+  "NetworkServerUDP_Port": 11000,
+  "NetworkServerURL": "http://localhost:5100",
+  "JoinServerURL": "http://localhost:5200",
+  "ApplicationServerURL": ""
 }
