Join Accept procedure and structure changes

--- a/LoRaWAN Backend/appsettings.json
+++ b/LoRaWAN Backend/appsettings.json
@@ -1,15 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
+    "Logging": {
+        "IncludeScopes": false,
+        "LogLevel": {
+            "Default": "Information",
+            "System": "Information",
+            "Microsoft": "Information"
+        }
+    },
 
-  // TODO: Add URLs
-  "NetworkServerUDP_Port": 11000,
-  "NetworkServerURL": "http://localhost:5100",
-  "JoinServerURL": "http://localhost:5200",
-  "ApplicationServerURL": ""
+    // TODO: Add URLs
+    "NetworkServerUDP_Port": 11000,
+    "NetworkServerURL": "http://localhost:5100",
+    "JoinServerURL": "http://localhost:5200",
+    "ApplicationServerURL": "http://localhost:5300"
 }
