--- a/Unit Test/Unit Test.csproj
+++ b/Unit Test/Unit Test.csproj
@@ -18,9 +18,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ApplicationServer\ApplicationServer.csproj" />
+    <ProjectReference Include="..\JoinServer\JoinServer.csproj" />
     <ProjectReference Include="..\LoRaWAN Backend\LoRaWAN.csproj" />
     <ProjectReference Include="..\Network Server\Network Server.csproj" />
-    <ProjectReference Include="..\UDPTestClient\UDPTestClient.csproj" />
   </ItemGroup>
 
 </Project>
